fixed contrast v-1

--- a/src/components/Description/Description.module.scss
+++ b/src/components/Description/Description.module.scss
@@ -36,5 +36,5 @@
 }
 
 .color {
-	color: $primary-color;
+	color: #ff7d4b;
 }
